2008-12-16  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/db_adddel/glom_db_treemodel.cc: 
	refresh_from_database(): Use STATEMENT_MODEL_CURSOR instead of 
	ITER_MODEL_ONLY, as needed by libgda-4.0. 

2008-12-15  Armin Burgmeier  <armin@openismus.com>

	* glom/libglom/document/document_glom.cc (set_table_fields): Fixed
	logic so that the document is set to be modified when the new fields
	differ from the old fields, not when they compare equal.

	* glom/libglom/document/document_glom.h: Also copy the m_info member
	in DocumentTableInfo's copy constructor and assignment operator.

	* glom/base_db.cc: Update the libgda meta store after having created a
	new table, so that get_fields_for_table_from_database works correctly
	for the new table. These changes fix creating new tables.

2008-12-15  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/connectionpool.cc:
	* glom/libglom/connectionpool.h:
	* glom/libglom/connectionpool_backends/postgres_self.cc:
	* glom/libglom/connectionpool_backends/sqlite.cc:
	* glom/libglom/data_structure/glomconversions.cc:
	* glom/libglom/document/document_glom.cc:
	* glom/mode_data/box_data_calendar_related.cc:
	* glom/mode_data/box_data_portal.cc:
	* glom/mode_data/flowtablewithfields.cc:
	* glom/relationships_overview/dialog_relationships_overview.cc:
	* glom/relationships_overview/dialog_relationships_overview.h:
	* glom/relationships_overview/printoperation_relationshipsoverview.cc:
	* glom/translation/window_translations.cc:
	* glom/utility_widgets/adddel/adddel.cc:
	* glom/utility_widgets/calendar/glomcalendar.cc:
	* glom/utility_widgets/calendar/glomcalendar.h:
	* glom/utility_widgets/calendar/glomgtkcalendar.h:
	* glom/utility_widgets/canvas/canvas_group_resizable.cc:
	* glom/utility_widgets/canvas/canvas_item_movable.cc:
	* glom/utility_widgets/datawidget.cc:
	* glom/utility_widgets/egg/toolpalette/eggtoolpalette.h:
	* glom/utility_widgets/flowtable.cc:
	* glom/utility_widgets/flowtable_dnd.cc: