@@ -1,5 +1,11 @@
 2008-12-16  Murray Cumming  <murrayc@murrayc.com>
 
+	* glom/libglom/connectionpool.cc: connect(): Store a cache of the 
+	connection for 30 seconds, to avoid unnecessary reconnects. Clear the 
+	cache when setting the username/password/database, to force a reconnect.
+
+2008-12-16  Murray Cumming  <murrayc@murrayc.com>
+
 	* glom/utility_widgets/db_adddel/glom_db_treemodel.cc: 
 	refresh_from_database(): Use STATEMENT_MODEL_CURSOR instead of 
 	ITER_MODEL_ONLY, as needed by libgda-4.0. 
